cleanup [java-completion]: Remove objectToLookupItem call
All the cases are actually covered above

GitOrigin-RevId: 137cde16f3752cbc45ec7c090c537688d8b5e6e5